# Abomination

./: Abomination.cpp  Abomination.h  CMakeLists.txt
Functions/: CMakeLists.txt  constants.h  data_functions.cpp  data_functions.h  file_functions.cpp  file_functions.h  math_functions.cpp  math_functions.h  text_functions.cpp  text_functions.h
